# MaxeGame

./: .gitignore  .gitmodules  CMakeLists.txt  shell.html
.cache/clangd/index/: AsyncFiles.cc.1ECD96DFDBF5A382.idx  AsyncFiles.hh.4FAD076D9F498936.idx  ECS.cc.2353D1181B08EC0C.idx  ECS.hh.EE59A20F8AA7FBF2.idx  Entry.cc.10E3CF3254FC12C9.idx  Flux.hh.02C638DF0EA6C0B7.idx  FluxArc.cc.9679DDF23FB1DED8.idx  FluxArc.hh.93892100B29F12FF.idx  GLFW.cc.39280BBBF313A501.idx  GLRenderer.cc.4C362B8FFC01EF91.idx  GLRenderer.hh.3515E76223166BBA.idx  Input.hh.88974B0822C7D4A2.idx  Log.cc.EFB4768297B7BA43.idx  Log.hh.1DF5DCE12793098E.idx  Maze.cc.07CE40825EC4609B.idx  Threads.cc.28AEECA75CF6D404.idx  (+144 more)
Assets/: .fluxproj_cache  BasicCube.farc  Compass.blend  Compass.blend1  Compass.farc  Compass.mtl  Cube.farc  Cube.mtl  DeathScreen.blend  DeathScreen.blend1  DeathScreen.farc  DeathScreen.mtl  Enclosure.blend  Enclosure.blend1  Enclosure.farc  Enclosure.glb  Enclosure.mtl  Exit.blend  Exit.farc  Exit.mtl  Ghost.blend  Ghost.blend1  Ghost.farc  Ghost.mtl  Marker.blend  Marker.blend1  Marker.farc  Marker.mtl  SplashScreen.blend  SplashScreen.blend1  SplashScreen.farc  SplashScreen.mtl  Test.farc  Test.map  TestLevel.farc  Wall.blend  Wall.blend1  WinScreen.blend  WinScreen.blend1  WinScreen.farc  (+6 more)
Assets/Oozey/: Oozey.blend  Oozey.farc  Oozey.mtl  OozeyScaled.farc  OozeyScaled.mtl  license
Levels/: Level1-5.json  Level1.json  Level2.json  TestLevel.json  Tutorial.json
Src/: Levels.ii  Maze.cc  Maze.hh  ShadowToLevel.py  TerrainGenerator.cc
shaders/: basic.frag  fragment.frag  vertex.vert
